[package]
name = "XcodePBXParser"
version = "0.1.0"
edition = "2024"
description = "Rust parser for Xcode .pbxproj files that uses a pest grammar to produce structured JSON output"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
